# GEM_RUST

./: !S.txt  .env.live.example  .gitignore  AI_ANALYTICS_MODEL.md  ASYMMETRIC_LADDER_ARCH.md  ASYMMETRIC_STRATEGY_MODEL.md  CLINE_NOTES.md  CODEX_CONTEXT.md  Cargo.toml  D1_STRATEGY_FORM_PROPOSALS.md  D1_STRATEGY_FORM_TEXT_BLOCKS.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_INSTRUCTIONS_DRAFT.md  README.md  README_CONFIGS.md  SERVER_MODE.md  STRATEGY_GUIDE.md  config.j_endgame.json  config.json  config.json.bak_h  math.txt
docs/: J_AUDIT_P0_REPAIR_PLAN.md  J_CRITICAL_FIX_CHECKLIST.md  J_ENDGAME.md  J_LIVE_DRY_REPAIR_PLAN.md  J_LIVE_EXECUTION_PLAN.md  J_PAPER_EXECUTION_REPAIR_PLAN.md  J_V4_LOG_ANALYSIS.md  J_V5_CONCEPT.md  J_WEEKLY_100_WINDOW_LOG_AUDIT.md  j_endgame_frequency.json
logs/: cf_analysis.py  gem_rust_server.json  trades_history.csv
logs/runs/20260601_103616_btc_5m_dynamic_grid/: entry_events.csv  lifecycle_events.csv  strategy_signals.csv  (+1 more)
skills/gem-rust-strategy-d/: SKILL.md
src/: analytics.rs  asset_price.rs  cex_micro.rs  client.rs  config.rs  daemon.rs  dashboard.rs  h_stats.rs  j_controller.rs  j_fees.rs  j_paper_executor.rs  live_audit.rs  live_executor.rs  llm.rs  main.rs  mid_cross_tracker.rs  orderbook.rs  redeem_hold.rs  server.rs  strategy.rs  trade_tape.rs  trader.rs  volatility.rs  window_chart.rs  window_stats.rs
src/strategy/: strategy_a.rs  strategy_b.rs  strategy_c.rs  strategy_d.rs  strategy_d1.rs  strategy_d_cross.rs  strategy_dx.rs  strategy_e.rs  strategy_h.rs  strategy_j.rs  strategy_x_last.rs
static/: dashboard.html
tools/: analyze_j_endgame_frequency.py
(+476 files in other folders)
