[package]
name = "gem_rust"
version = "0.1.0"
edition = "2021"
description = "Event-Driven Polymarket Volatility Harvester in Rust"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
crossterm = "0.28"
anyhow = "1.0"
alloy = { version = "1", default-features = false, features = ["signer-local", "signers"] }
gcp_auth = "0.12"
polymarket_client_sdk_v2 = { version = "0.6.0-canary.1", features = ["clob", "heartbeats"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "tls12"] }
